# iri2020

./: .gitignore  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: algorithms.md  index.md  package.md  porting.md
docs/javascripts/: mathjax.js
scratch/: test_print.py
src/fortran/: CMakeLists.txt  cira.for  igrf.for  iri_c_bindings.f90  irifun.for  irisub.for  iritec.for  rocdrift.for
src/iri2020/: __init__.py  base.py  latitude.py  times.py  vprofile.py
src/iri2020/tests/: test_mod.py  test_scripts.py
src/rust/: Cargo.toml  build.rs  test_out.txt
src/rust/src/: b0_b1_model.rs  calion_coeff.rs  cira.rs  cira_coeff.rs  cormag_data.rs  d_region.rs  data_io.rs  driver.rs  e_layer.rs  ffi.rs  firi_data.rs  hmf2_coeff.rs  igrf.rs  igrf_coeff.rs  ioncom.rs  iridreg.rs  iriflip.rs  irifun_utils.rs  irisub.rs  iritec.rs  lib.rs  rocdrift.rs  rocdrift_coeff.rs  spharm.rs  spreadf_brazil.rs  storme_coeff.rs  xe_profile.rs
src/rust/tests/: cira_tests.rs  data_io_tests.rs  igrf_tests.rs  iriflip_tests.rs  irifun_utils_tests.rs  iritec_tests.rs  layer_tests.rs  regression_tests.rs  rocdrift_tests.rs  xe_profile_tests.rs
src/rust/tests/fixtures/: scenario1.json  scenario2.json  scenario3.json
