[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "iri2020"
version = "0.1.0"
description = "IRI2020 ionosphere model from Python and Rust"
requires-python = ">=3.8"
dependencies = [
    "xarray",
    "numpy",
    "python-dateutil",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
module-name = "iri2020.iri2020"
manifest-path = "src/rust/Cargo.toml"
exclude = []
