[package]
name = "iri2020-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "iri2020"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["auto-initialize"] }
numpy = "0.20"
chrono = "0.4"

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
